--- a/examples/checkbox/checkbox-3.html
+++ b/examples/checkbox/checkbox-3.html
@@ -12,7 +12,7 @@
   <body>
     <main role="main">
       <h1>ARIA <code>checkbox</code>: Mixed State Checkbox with Grouping Label</h1>
-    <p> <a href="../../aria-practices.html#checkbox">WAI-ARIA 1.1 : Checkbox pattern </a></p>
+    <p> <a href="../../aria-practices.html#h-checkbox">WAI-ARIA 1.1 : Checkbox</a></p>
       <ul>
           <li>This example uses the native HTML5 semantics for grouping (e.g. fieldset/legend) and is the preferred technique for accessibility.</li>
           <li>This example illustrates the use of a mixed state checkbox (e.g. all condiments) with a set of standard HTML checkboxes, <code>input type="checkbox"</code> (e.g, condiments options). </li>
