--- a/examples/link/link.html
+++ b/examples/link/link.html
@@ -10,20 +10,17 @@
   <script src="js/link.js" type="text/javascript"></script>
 </head>
 <body>
-  <header role="banner">
+    
     <h1>ARIA Example: <code>link</code> role</h1>
-  </header>
   
   <main role="main">
-
-    <h1>Creating links using <code>role=link</code></h1>
-
-    <p><strong>Note:</strong> When using HTML use the <code>&lt;a&gt;</code> element. It is recommended that authors not re-purpose other elements to create links.</p>
-
-    <h2 id="id1">Example Links</h2>
-
-    <div id="example">
     
+    <h2>Creating links using <code>role=link</code></h2>
+
+    <p> <a href="../../aria-practices.html#h-link">WAI-ARIA 1.1 : Link</a></p>
+    <p><strong>Note:</strong> When using HTML use the <code>&lt;a&gt;</code> element. It is recommended that authors not re-purpose other elements to create links.</p>
+    <h2 id="id1">Example Links</h2>
+    <div id="example">
     <table aria-labelledby="id1">
       <thead>
         <tr>
