reflected feedback for APG meeting
-The label, WAI ARIA link to Authoring Practice Design Pattern for
“pattern name” for all the examples.
-add tabindex=-1info
-keyboard feature as “arrow” from “up and down arrow”
-removed “or generated content”

--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -17,7 +17,7 @@
     
     <h2>Creating Buttons using <code>role=button</code></h2>
     
-    <p> <a href="../../aria-practices.html#h-button">WAI-ARIA 1.1 : Button</a></p>
+    <p> <a href="../../aria-practices.html#h-button">Authoring Practice Design Patten for Button</a></p>
     <p><strong>Note:</strong> When using HTML, use the <code>&lt;button&gt;</code> element. It is recommended that authors not re-purpose other elements to create buttons.</p>
 
     <h2>Button Examples</h2>
