--- a/examples/checkbox/checkbox-1.html
+++ b/examples/checkbox/checkbox-1.html
@@ -17,7 +17,7 @@
 
     <h2>Simple Checkbox</h2>
  
-    <p> <a href="../../aria-practices.html#h-checkbox">WAI-ARIA 1.1 : Checkbox</a></p>
+    <p> <a href="../../aria-practices.html#h-checkbox">Authoring Practice Design Patten for Checkbox</a></p>
     <h2 id="id_example">Simple Checkbox Example</h2>
         <div id="example">
            <div role="checkbox" aria-checked="false"  tabindex= "0" onkeydown="toggleCheckbox(event)" onclick="toggleCheckbox(event)" onfocus="focusCheckbox(event)" onblur="blurCheckbox(event)"><img src="./images/checkbox-unchecked-black.png" role="presentation"> Label 1</div> 
