--- a/examples/radio/radio.html
+++ b/examples/radio/radio.html
@@ -13,10 +13,10 @@
     <main role="main">
       <h1>ARIA <code>radiogroup</code> and <code>radio</code> Example</h1>
 
-      <p> <a href="../../aria-practices.html#h-radiobutton">WAI-ARIA 1.1 : Radio Group</a></p>
+      <p> <a href="../../aria-practices.html#h-radiobutton">Authoring Practice Design Patten for Radio Group</a></p>
       <ul>
           <li>The <code>radiogroup</code> role defines a container for a set of ARIA radio buttons.</li>
-          <li>The radio button that is currently selected is identified using <code>aria-checked=“true”.</code></li>
+          <li>The radio button that is currently checked is identified using <code>aria-checked=“true”.</code></li>
           <li>Only one radio button can be selected at a time, all other radio buttons should define <code>aria-checked</code> as “false".</li> 
           <li>The label for the radio group is defined using <code>aria-labelledby</code> attribute. (e.g. “Pizza Crust”)</li>
           <li>The labels for the radio buttons are defined by the text nodes of each radio button. (e.g. “Regular Crust”, “Deep Dish”…)</li>
@@ -60,7 +60,8 @@
              <ul>
                 <li><code>div</code> element with role <code>radio</code> has <code>onkeydown</code> event to support keyboard activation of the radio.</li>
                 <li><code>div</code> element with role <code>radio</code> has <code>tabindex="0"</code> to become part of the tab order of the page.</li>
-                <li><code>img</code> element is used to visually indicate the state of radio (e.g. checked, unchecked) to ensure the visual state will be visible when browsers or operating system use “High Contrast” settings by people with visual impairments. (Note: CSS background image techniques or generated content result in visual state disappearing when browsers or operating systems are configured to display high contrast themes.)</li>
+                <li>Each radio has <code>tabindex="-1"</code> except one.</li>
+                <li><code>img</code> element is used to visually indicate the state of radio (e.g. checked, unchecked) to ensure the visual state will be visible when browsers or operating system use “High Contrast” settings by people with visual impairments. (Note: CSS background image techniques result in visual state disappearing when browsers or operating systems are configured to display high contrast themes.)</li>
                 <li><code>setRadioButton</code> function uses <code>aria-checked</code> attribute to make sure the information communicated to asssitive tecnology is the same as the visual state. (e.g. <code>img </code>element)</li>
                 <li><code>onfocus</code>  and <code>onblur</code> event handlers on <code>radio</code> support visual focus styling for keyboard only users.</li>
               </ul>
@@ -79,7 +80,7 @@
             <td>Moves keyboard focus to radiogroup.</td>
           </tr>
           <tr>
-            <td>Up and Down arrow</td>
+            <td>Arrow</td>
             <td>Moves up and down radio options.</td>
           </tr>
         </tbody>
