Add Michiel Bijl as editor

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -59,6 +59,8 @@
               mailto: "cooper@w3.org",
                   company: "W3C", companyURI:
                   "http://www.w3.org/" },
+              { name: "Michiel Bijl",
+                  company: "Invited Expert" },
         { name: "Joseph Scheuhammer",
           company: "Inclusive Design Research Centre, OCAD University",
           companyURI: "http://idrc.ocad.ca/", 
